--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,16 @@
-* {
+*, *::before, *::after {
     box-sizing: border-box;
 }
 
+:root {
+--light-grey--: #e4e4e4;
+--pale-grey--:  #f2f2f2;
+--grey--: #808080;
+--sky-blue--: #87cefa;
+}
+
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', Helvetica, Arial sans-serif;
     margin: 0;
 }
 
@@ -11,16 +18,16 @@ body {
 .cookie-banner {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid #e4e4e4;
-    background-color: #f2f2f2;
-    color: #808080;
+    border-bottom: 1px solid var(--light-grey--);
+    background-color: var(--pale-grey--);
+    color: var(--grey--);
     font-size: 12px;
     padding: 4px 15px;  
     margin: 0;
 }
 
 .cookie-banner a {
-    color: #87cefa;
+    color: var(--sky-blue--);
     text-decoration: none;
 }
 
@@ -28,8 +35,6 @@ body {
     cursor: pointer;
     background: none;
     border: 0;
-    color: #808080;
-    padding-bottom: 20px;
-    
-    
+    color: var(--grey--);
+    padding-bottom: 20px;  
 }
