--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,62 @@
-/* CSS */
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+:root {
+--Mercury: #e4e4e4;
+--Concrete:  #f2f2f2;
+--Grey: #808080;
+--Malibu: #87cefa;
+--Dodger-Blue: #4387fd;
+--Tundora: #404040;
+--White: #ffffff; 
+}
+
+body {
+    font-family: 'Roboto', Helvetica, Arial sans-serif;
+    margin: 0;
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.google-navigation {
+    padding: 0 30px;
+}
+
+.google-navigation__item {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    display: flex;
+}
+
+.google-navigation__link {
+    text-decoration: none;
+    color: var(--Tundora);
+    padding: 0 15px;
+    display: flex;
+    align-items: center;
+}
+
+.google-navigation__button {
+    cursor: pointer;
+    outline: none;
+}
+
+.button-primary {
+    background: var(--Dodger-Blue);
+    border-radius: 2px;
+    border: 1px solid var(--Dodger-Blue);
+    font-weight: 700;
+    color: var(--White);
+    padding: 7px 12px;
+}
+
+.products-button {
+    background: none;
+    border: none;
+    padding: 0 15px;
+}
