Search-Module search input

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 --Concrete:  #f2f2f2;
 --Grey: #808080;
 --Malibu: #87cefa;
+--Alto: #DEDEDE;
 }
 
 body {
@@ -50,3 +51,39 @@ body {
 .logo img {
     width: 250px;
 }
+
+.search {
+    text-align: center;
+    padding: 12px; 
+}
+
+.search input {
+   border: none;
+   width: 450px;
+}
+
+.search-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 550px;
+    height: 40px;
+    border-radius: 20px;
+    border: 1px solid var(--Alto);
+    margin: 0 auto;
+}
+
+.search-icon-right {
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    gap: 10px;
+}
+
+.search-icon-left {
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+}
+
+
+
