--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,13 @@
     --Mercury: #e4e4e4;
     --Concrete:  #f2f2f2;
     --Grey: #808080;
-    --Malibu: #87cefa;
+    --Royal-Blue: #3377ec;
     --Dodger-Blue: #4387fd;
     --Tundora: #404040;
     --White: #ffffff; 
+    --None: transparent;
+    --fs-regular: 14px;
+    --fs-bold: 700;
 }
 
 body {
@@ -34,40 +37,69 @@ ul {
     justify-content: flex-end;
 }
 
-.google-navigation {
+.main-nav {
     padding: 0 30px;
 }
 
-.google-navigation__item {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 13px;
+.main-nav__list {
     display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 0;
 }
 
-.google-navigation__link {
+.main-nav__list-item {
+    font-size: var(--fs-regular);
+}
+
+.main-nav__link {
     text-decoration: none;
     color: var(--Tundora);
     padding: 0 15px;
     display: flex;
     align-items: center;
-}
-
-.google-navigation__button {
-    cursor: pointer;
     outline: none;
 }
 
-.button-primary {
-    background: var(--Dodger-Blue);
-    border-radius: 2px;
-    border: 1px solid var(--Dodger-Blue);
-    font-weight: 700;
-    color: var(--White);
-    padding: 7px 12px;
+.main-nav__link:focus {
+    text-decoration: underline;
 }
 
-.products-button {
-    background: none;
-    border: none;
-    padding: 0 15px;
+.button {
+    cursor: pointer;
+    background-color: var(--None);
+    border: 1px solid var(--None); 
+    font-size: var(--fs-regular);
+    font-weight: var(--fs-bold);
+    color: var(--Tundora);
+    padding: 7px 12px;
+    margin: 0;
+    border-radius: 2px;
+}
+
+.button--primary {
+    background-color: var(--Dodger-Blue);
+    border: 1px solid var(--Dodger-Blue);
+    color: var(--White);
+    outline: none;
+}
+
+.button--primary:focus {
+    background-color: var(--Royal-Blue);
+    border-color: var(--Royal-Blue);
+}
+
+.button--icon {
+    padding: 3px 12px;
+    outline: none;
+}
+
+.button--icon .icon {
+    width: 22px;
+    height: 22px;
+    fill: var(--Tundora);
+}
+
+.button--icon:focus .icon {
+    fill: var(--Gray);
 }
