--- a/css/styles.css
+++ b/css/styles.css
@@ -85,5 +85,22 @@ body {
     padding: 0 10px;
 }
 
+.google-buttons {
+   text-align: center;
+   
+}
+
+.google-buttons__search {
+    background-color: var(--Concrete);
+    color: var(--Grey);
+    border: 1px solid var(--Concrete);
+    border-radius: 5px;
+    font-size: 12px;
+    margin: 12px 6px;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+
 
 
