--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,6 @@
 }
 
 :root {
-<<<<<<< HEAD
---Mercury: #e4e4e4;
---Concrete:  #f2f2f2;
---Grey: #808080;
---Malibu: #87cefa;
---Alto: #DEDEDE;
-=======
     --Mercury: #e4e4e4;
     --Concrete:  #f2f2f2;
     --Grey: #808080;
@@ -17,15 +10,20 @@
     --Dodger-Blue: #4387fd;
     --Tundora: #404040;
     --White: #ffffff; 
+    --Alto: #DEDEDE;
     --None: transparent;
     --fs-regular: 14px;
     --fs-bold: 700;
->>>>>>> develop
+}
+
+html {
+    position: relative;
+    min-height: 100%; 
 }
 
 body {
     font-family: 'Roboto', Helvetica, Arial sans-serif;
-    margin: 0;
+    margin: 0 0 100px;
 }
 
 .sr-only {
@@ -52,7 +50,7 @@ ul {
 .main-nav__list {
     display: flex;
     align-items: center;
-    margin: 0;
+    margin: 15px 0;
     padding: 0;
 }
 
@@ -198,6 +196,48 @@ ul {
     cursor: pointer;
 }
 
+/* Footer */
+
+footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    overflow:hidden; 
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+}
+
+.google-links ul :last-child {
+    padding-right: 10px;
+}
+
+.google-links {
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid var(--Mercury);
+    background-color: var(--Concrete);
+    padding: 10px 0;
+}
+
+.google-links__nav a {
+    color: var(--Grey);
+    font-size: var(--fs-regular);
+    text-decoration: none;
+    padding-left: 30px;
+}
+
+.google-country-information {
+    color: var(--Grey);
+    font-size: var(--fs-regular); 
+    padding: 10px 30px;
+    border-top: 1px solid var(--Mercury);
+    background-color: var(--Concrete);
+    width: 100%;
+}
 
 
 
